tests/elab_fail/byStrictIndent.lean.out.expected
byStrictIndent.lean:3:55-3:57: error: unsolved goals
n : Nat
h : n > 1
⊢ n > 1
byStrictIndent.lean:4:0-4:5: error: unexpected identifier; expected command
byStrictIndent.lean:8:25-8:27: error: unsolved goals
n : Nat
h : n > 0
⊢ n > 1
byStrictIndent.lean:10:2-10:7: error: No goals to be solved
byStrictIndent.lean:13:54-15:9: error: unsolved goals
n : Nat
h : n > 0
helper : n > 1
⊢ n > 1
byStrictIndent.lean:16:3-16:8: error: unexpected token 'sorry'; expected command
byStrictIndent.lean:19:54-21:9: error: unsolved goals
n : Nat
h : n > 0
helper : n > 1
⊢ n > 1
byStrictIndent.lean:22:6-22:11: error: unexpected token 'sorry'; expected command
byStrictIndent.lean:38:50-38:52: error: unsolved goals
⊢ True
byStrictIndent.lean:38:32-38:52: error: unsolved goals
this : True
⊢ True
byStrictIndent.lean:39:2-39:7: error: unexpected identifier; expected command
byStrictIndent.lean:43:68-43:70: error: unsolved goals
⊢ True
byStrictIndent.lean:43:50-43:70: error: unsolved goals
this : True
⊢ True
byStrictIndent.lean:43:32-43:70: error: unsolved goals
this : True
⊢ True
byStrictIndent.lean:44:2-44:7: error: unexpected identifier; expected command
byStrictIndent.lean:68:18-68:20: error: unsolved goals
⊢ True
byStrictIndent.lean:69:0-69:7: error: unexpected identifier; expected command
byStrictIndent.lean:72:45-72:47: error: unsolved goals
⊢ True
byStrictIndent.lean:73:0-73:7: error: unexpected identifier; expected command
byStrictIndent.lean:85:32-85:34: error: unsolved goals
⊢ True
byStrictIndent.lean:86:2-86:9: error: unexpected identifier; expected command
byStrictIndent.lean:92:38-92:40: error: unsolved goals
⊢ True
byStrictIndent.lean:93:2-93:5: error: unexpected token; expected command
byStrictIndent.lean:97:48-98:6: error: unsolved goals
⊢ True
byStrictIndent.lean:99:2-99:5: error: unexpected token; expected command
